[gd_scene load_steps=3 format=3 uid="uid://cb3q7a147e4k8"]

[ext_resource type="Script" path="res://Scripts/UI/PauseMenu.gd" id="1_d0n8a"]
[ext_resource type="Theme" uid="uid://cg2n8e45mkkj6" path="res://Assets/Themes/default_theme.tres" id="2_c777e"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_d0n8a")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c777e")
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="BtnResume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BtnSettings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c777e")

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="HBoxContainer_Sensitivity" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_Sensitivity"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="HSlider_Sensitivity" type="HSlider" parent="SettingsMenu/VBoxContainer/HBoxContainer_Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 0.5
step = 0.01
value = 0.2

[node name="Label_SensitivityValue" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_Sensitivity"]
layout_mode = 2
text = "0.20"

[node name="HBoxContainer_MasterVolume" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_MasterVolume"]
layout_mode = 2
text = "Master Volume:"

[node name="HSlider_MasterVolume" type="HSlider" parent="SettingsMenu/VBoxContainer/HBoxContainer_MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="Label_MasterVolumeValue" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_MasterVolume"]
layout_mode = 2
text = "80%"

[node name="HBoxContainer_SFXVolume" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_SFXVolume"]
layout_mode = 2
text = "SFX Volume:"

[node name="HSlider_SFXVolume" type="HSlider" parent="SettingsMenu/VBoxContainer/HBoxContainer_SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="Label_SFXVolumeValue" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_SFXVolume"]
layout_mode = 2
text = "80%"

[node name="HBoxContainer_MusicVolume" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_MusicVolume"]
layout_mode = 2
text = "Music Volume:"

[node name="HSlider_MusicVolume" type="HSlider" parent="SettingsMenu/VBoxContainer/HBoxContainer_MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="Label_MusicVolumeValue" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer_MusicVolume"]
layout_mode = 2
text = "80%"

[node name="BtnBack" type="Button" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/HBoxContainer_Sensitivity/HSlider_Sensitivity" to="." method="_on_h_slider_sensitivity_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/HBoxContainer_MasterVolume/HSlider_MasterVolume" to="." method="_on_h_slider_master_volume_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/HBoxContainer_SFXVolume/HSlider_SFXVolume" to="." method="_on_h_slider_sfx_volume_value_changed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/HBoxContainer_MusicVolume/HSlider_MusicVolume" to="." method="_on_h_slider_music_volume_value_changed"]
[connection signal="pressed" from="SettingsMenu/VBoxContainer/BtnBack" to="." method="_on_btn_back_pressed"]